# snakeNEATAI

./: CMakeLists.txt  README.md
debug/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  SnakeNEAT.sln  SnakeNEAT.vcxproj  SnakeNEAT.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
debug/Release/: best_genome_0.json  best_genome_100.json  best_genome_50.json
debug/SnakeNEAT.dir/Release/: SnakeNEAT.exe.recipe
debug/SnakeNEAT.dir/Release/SnakeNEAT.tlog/: CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
debug/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
debug/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
debug/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
src/: allcode.txt  main.cpp
src/core/: PoolManager.h  ThreadPool.h
src/game/: Game.cpp  Game.h  Snake.cpp  Snake.h
src/neat/: Gene.h  Genome.cpp  Genome.h  InnovationTracker.cpp  InnovationTracker.h  NEAT.cpp  NEAT.h  NeatConfig.h  Network.cpp  Network.h  Species.cpp  Species.h
src/render/: Renderer.cpp  Renderer.h
